AH-2004-03-04-0: Bugfix:    Job-queue matching in qstat broken
                 Issue:     786
                 Review:    AS

AS-2004-03-05-0: Bugfix:    wrong dependencies for sge_sub_object.c are now
                            corrected through new script 
                            scripts/fix_dependencies
                 Issue:     781

DT-2004-03-05-2: Bugfix:    o Removed help output on qstat with no args
                 Changed:   qstat
                 Issue:     782

CR-2004-03-05-1: Bugfix:    sge_shadowd fails to create communication handle 
                            on takeover and exits.
                 Issue:     776
                 Review:    MD

DT-2004-03-05-1: Bugfix:    o Changed list separator from ',' to ' ' for
                              hostgroups in qconf
                 Changed:   qconf
                 Issue:     780

DT-2004-03-05-0: Bugfix:    o Added missing error message for missing SGE_ROOT
                              in qmaster
                            o Removed duplicate comm lib "can't connect" error
                              messages
                            o Cleaned up qsub error messages
                            o Added help output for qconf, qstat, qmod, and
                              qalter with no args
                            o Converted sge_send_any_request to use answer lists
                 Changed:   GDI, qsub, qconf, qalter, qmod, qstat, qmaster, evc
                 Issue:     774

SG-2004-03-05-1: Bugfix:    fixed a bug in changing build-in centries
                            from strings to an other string type
                 Issue:     759
                 Changed:   qmaster

SG-2004-03-05-0: Enhancem.: - updated the qstat schema files. 
                            - fixed a xml string encoding problem
                 Changed:   qstat schemas, qstat

CR-2004-03-05-0: Bugfix:    fixed broken CSP install
                 Changed:   install scripts, CULL feature list, feature