@@ -1,3 +1,9 @@
+DT-2004-03-05-3: Bugfix:    o Moved internal details from comm lib error message
+                              into DPRINTF in sge_send_any_request().
+                 Changed:   qmon, GDI
+                 Issue:     783
+                 Review:    pending
+
 AH-2004-03-04-0: Bugfix:    Job-queue matching in qstat broken
                  Issue:     786
                  Review:    AS
